--- a/Source/Android/app/src/main/res/layout/tv_title.xml
+++ b/Source/Android/app/src/main/res/layout/tv_title.xml
@@ -25,7 +25,8 @@
             android:id="@+id/badge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher"/>
+            android:src="@drawable/ic_launcher"
+            android:contentDescription="@string/dolphin_icon"/>
 
     </RelativeLayout>
 </androidx.leanback.widget.TitleView>
